<resources>
  <string name="app_name">Bill Smart</string>
  <!-- Strings related to login -->
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="welcome">"Welcome!"</string>
  <string name="invalid_username">Not a valid username</string>
  <string name="invalid_password">Password must be >5 characters</string>
  <string name="login_failed">"Login failed"</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="bill_smart">Bill Smart</string>
  <string name="login">Login</string>
  <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here</string>
  <string name="register">Register</string>
  <string name="username">Username</string>
  <string name="sign_out">Sign Out</string>
  <string name="friends">Friends</string>
  <string name="groups">Groups</string>
  <string name="activity">Activity</string>
  <string name="account">Account</string>
  <string name="add">Add</string>
  <string name="expense">Expense</string>
  <string name="add_an_expense">Add an Expense</string>
  <string name="cancel">Cancel</string>
  <string name="add_new_contact">Add New Contact</string>
    <string name="add_friend">Add Friend</string>
  <string name="expense_add_friend">Search a Friend by Name to Add Expense</string>
</resources>
