<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
    android:id="@+id/friendsTab"
    android:enabled="true"
    android:icon="@drawable/ic_friends"
    android:title="@string/friends" />
  <item
    android:id="@+id/groupsTab"
    android:enabled="true"
    android:icon="@drawable/ic_groups"
    android:title="@string/groups" />
  <item
    android:id="@+id/expenseTab"
    android:enabled="true"
    android:icon="@drawable/ic_expense"
    android:title="@string/expense" />
  <item
    android:id="@+id/activityTab"
    android:enabled="true"
    android:icon="@drawable/ic_activity"
    android:title="@string/activity" />
  <item
    android:id="@+id/accountTab"
    android:enabled="true"
    android:icon="@drawable/ic_account"
    android:title="@string/account" />
</menu>
