<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".ui.friends.AddNewContactFragment">

  <RelativeLayout
    android:id="@+id/topBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Cancel Button -->
    <Button
      android:id="@+id/btnCancel"
      style="@style/Widget.Material3.Button.TextButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_centerVertical="true"
      android:layout_marginStart="16dp"
      android:text="@string/cancel" />

    <!-- Title -->
    <TextView
      android:id="@+id/tvTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:text="@string/add_new_contact"
      android:textSize="18sp"
      android:textStyle="bold" />

    <!-- Add Button -->
    <Button
      android:id="@+id/btnAdd"
      style="@style/Widget.Material3.Button.TextButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_centerVertical="true"
      android:layout_marginEnd="16dp"
      android:text="@string/add" />

  </RelativeLayout>

  <LinearLayout
    android:orientation="vertical"
    android:paddingTop="24dp"
    android:paddingHorizontal="32dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputLayoutEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:errorEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/editTextEmail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email"
      android:inputType="textEmailAddress" />

  </com.google.android.material.textfield.TextInputLayout>
  </LinearLayout>

</LinearLayout>
